--- a/.github/workflows/blog-pages.yml
+++ b/.github/workflows/blog-pages.yml
@@ -36,4 +36,5 @@ jobs:
           publish_dir: ./blog_build
           user_name: "github-actions[bot]"
           user_email: "github-actions[bot]@users.noreply.github.com"
-          force: true
+          force_orphan: true          # 既存ブランチがあっても上書き
+          commit_message: "Deploy blog via GitHub Actions"
