--- a/.github/workflows/blog-pages.yml
+++ b/.github/workflows/blog-pages.yml
@@ -1,44 +1,9 @@
-name: Build and Deploy Blog
+- name: Install dependencies
+  run: |
+    cd homepage/blog_src
+    bundle install
 
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.2'
-
-      - name: Install Bundler
-        run: gem install bundler
-
-      - name: Install dependencies
-        run: |
-          cd blog
-          bundle install
-
-      - name: Build blog
-        run: |
-          cd blog
-          bundle exec jekyll build -d ../blog_build
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./blog_build
-          publish_branch: gh-pages
-          user_name: "github-actions[bot]"
-          user_email: "github-actions[bot]@users.noreply.github.com"
-          force_orphan: true       # 初回 push 用
-          allow_empty_commit: true # 初回で blog_build が空でも安全
-          commit_message: "Deploy blog via GitHub Actions"
+- name: Build site
+  run: |
+    cd homepage/blog_src
+    bundle exec jekyll build --destination ../blog
