--- a/.github/workflows/blog-pages.yml
+++ b/.github/workflows/blog-pages.yml
@@ -1,9 +1,35 @@
-- name: Install dependencies
-  run: |
-    cd homepage/blog_src
-    bundle install
+name: Build and Deploy Blog
 
-- name: Build site
-  run: |
-    cd homepage/blog_src
-    bundle exec jekyll build --destination ../blog
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
+
+      - name: Install dependencies
+        run: |
+          cd homepage/blog_src
+          bundle install
+
+      - name: Build Jekyll site
+        run: |
+          cd homepage/blog_src
+          bundle exec jekyll build --destination ../blog
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./homepage
