--- a/blog_src/Gemfile
+++ b/blog_src/Gemfile
@@ -1,8 +1,7 @@
-# frozen_string_literal: true
-
 source "https://rubygems.org"
 
 gem "jekyll", "~> 4.3"
+gem "jekyll-theme-chirpy"   # ← 追加
 
 gem "html-proofer", "~> 5.0", group: :test
 
