--- a/.github/workflows/blog-pages.yml
+++ b/.github/workflows/blog-pages.yml
@@ -9,34 +9,37 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      # 1. リポジトリのチェックアウト
       - uses: actions/checkout@v4
 
-      # Ruby セットアップ
+      # 2. Ruby セットアップ
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
           bundler-cache: true
 
-      # Jekyll build
+      # 3. Jekyll ビルド
       - name: Build Jekyll blog
         run: |
           cd blog_src
           bundle install
           bundle exec jekyll build
 
-      # デプロイ用フォルダ作成
+      # 4. デプロイ用ディレクトリを作成
       - name: Prepare deploy directory
         run: |
           mkdir deploy
-          # 会社HPをコピー（main直下のindex.htmlなど）
-          cp -r ./* ./deploy/
-          # blog を deploy/blog にコピー
-          cp -r ./blog_src/_site ./deploy/blog
+          # deploy フォルダ自身をコピー対象から除外して会社HPをコピー
+          shopt -s extglob
+          cp -r !(deploy) deploy/
+          # ブログを deploy/blog にコピー
+          cp -r ./blog_src/_site deploy/blog
 
-      # デプロイ実行
-      - name: Deploy All
+      # 5. gh-pages ブランチにまとめてデプロイ
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./deploy
-          force_orphan: true
+          destination_dir: .
+          keep_files: true    # 他のファイルを残す場合は true
