--- a/.github/workflows/blog-pages.yml
+++ b/.github/workflows/blog-pages.yml
@@ -30,11 +30,12 @@ jobs:
       - name: Prepare deploy directory
         run: |
           rm -rf deploy
-          mkdir deploy
+          mkdir -p deploy/blog   # blog ディレクトリも作成しておく
           # 会社HPのファイルをコピー
           cp -r index.html assets deploy/
           # ブログを deploy/blog にコピー
           cp -r blog_src/_site/* deploy/blog/
+
 
       # gh-pages ブランチにデプロイ
       - name: Deploy to gh-pages
